v0.22.0/_sources/reference/_autoapi/docbuild/models/config/env/EnvPathsConfig.rst.txt
docbuild.models.config.env.EnvPathsConfig
=========================================

.. py:class:: docbuild.models.config.env.EnvPathsConfig(/, **data: Any)

   Bases: :py:obj:`pydantic.BaseModel`

   .. autoapi-inheritance-diagram:: docbuild.models.config.env.EnvPathsConfig
      :parts: 1


   Defines various application paths, including permanent storage and cache.


   .. py:attribute:: model_config

      Configuration for the model, should be a dictionary conforming to [`ConfigDict`][pydantic.config.ConfigDict].



   .. py:attribute:: config_dir
      :type:  pathlib.Path
      :value: None


      Path to configuration files.



   .. py:attribute:: main_portal_config
      :type:  pathlib.Path
      :value: None


      Path to the main portal XML configuration file.



   .. py:attribute:: portal_rncschema
      :type:  pathlib.Path
      :value: None


      Path to the portal RELAX NG (RNC) schema file.



   .. py:attribute:: root_config_dir
      :type:  pathlib.Path
      :value: None


      Path to the root configuration files.



   .. py:attribute:: jinja_dir
      :type:  pathlib.Path
      :value: None


      Path for Jinja templates.



   .. py:attribute:: server_rootfiles_dir
      :type:  pathlib.Path
      :value: None


      Path for server root files.



   .. py:attribute:: repo_dir
      :type:  docbuild.models.path.EnsureWritableDirectory
      :value: None


      Path for permanent bare Git repositories.



   .. py:attribute:: tmp_repo_dir
      :type:  docbuild.models.path.EnsureWritableDirectory
      :value: None


      Directory for temporary working copies.



   .. py:attribute:: base_cache_dir
      :type:  docbuild.models.path.EnsureWritableDirectory
      :value: None


      Base path for all caches.



   .. py:attribute:: base_server_cache_dir
      :type:  docbuild.models.path.EnsureWritableDirectory
      :value: None


      Base path for server caches.



   .. py:attribute:: meta_cache_dir
      :type:  docbuild.models.path.EnsureWritableDirectory
      :value: None


      Metadata cache path.



   .. py:attribute:: json_cache_dir
      :type:  docbuild.models.path.EnsureWritableDirectory
      :value: None


      JSON cache path.



   .. py:attribute:: runtime_base_dir
      :type:  docbuild.models.path.EnsureWritableDirectory
      :value: None


      Base runtime path.



   .. py:attribute:: lock_dir
      :type:  docbuild.models.path.EnsureWritableDirectory
      :value: None


      Directory for lock files.



   .. py:attribute:: tmp
      :type:  EnvTmpPaths

      Temporary build paths.



   .. py:attribute:: target
      :type:  EnvTargetPaths

      Target deployment and backup paths.


